web/themes/utmusic/components/adminspring.scss
/**
 * @file
 *
 * This file is used to override our paragraphs style in layout builder.
 *
 * Sometimes it is required to modify a paragraphs style in the backend to fix
 * a bug. e.g. if a paragraph has negative margin but that will mess with
 * layout builder we could reset that margin here.
 */

// External Libraries
@import '~breakpoint-sass/stylesheets/breakpoint.scss';

// Components
@import '00-base/00-functions/*.scss';
@import '00-base/01-variables/*.scss';

/******************************************************************************/

// Add Styles here.
// .adminspring-preview .m-text {
//   outline: 1px solid pink;
// }

// Header paragraphs.
.field--name-field-page-header .adminspring-preview {
  margin: 15px 0 0 0 !important;
  padding: 0 !important;
}

.adminspring-preview .o-hero-media__tabs {
  display: none;
}

// Remove the 'About text formats' help text.
.filter-help {
  display: none;
}

// preview for the card component with alignment--stretch.
.adminspring-preview .l-section-vertical-alignment--stretch .utmusic-paragraph-wrapper {
  height: 100%;

  > div[class^='m-card'] {
    height: 100%;
  }
}

.lpb-dialog .lpb-component-list__item a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.lpb-dialog .lpb-component-list__item img {
  width: auto;
  max-width: 98%;
  max-height: rem(375px);
  margin-bottom: auto;
  margin-top: auto;
}

.lpb-dialog .lpb-component-list__item span {
  margin-top: rem(15px);
}

// Fix for position of entity browser modal.
.ui-dialog.entity-browser-modal {
  position: fixed;
}

// Override the default published status checkbox.
 .ui-widget.ui-widget-content:has(.field--name-status.field--widget-boolean-checkbox) {
  .layout-paragraphs-component-form {
    padding-top: rem(25px);
    position: relative;
  }

  div.field--name-status.field--widget-boolean-checkbox.field--type-boolean {
    position: absolute;
    top: rem(10px);
    right: 0px;
  
    label.form-item__label.option {
      position: relative;
      display: block;
      width: rem(40px);
      height: rem(20px);
      background-color: rgba(0, 0, 0, 0.25);
      border-radius: rem(20px);
      transition: all 0.3s;
      font-size: 0;
    }

    .form-item__label::after {
      content: '';
      position: absolute;
      width: rem(18px);
      height: rem(18px);
      border-radius: 50%;
      background-color: white;
      top: 1px;
      left: 1px;
      transition: all 0.3s;
    }

    .form-checkbox:checked + .form-item__label::after {
      left: rem(20px);
    }

    .form-checkbox:checked + .form-item__label {
      background-color: var(--c-card--illustration);
    }

    .form-checkbox {
      opacity: 0;

      &:focus + label {
        box-shadow: 0 0 0 2px var(--color-white), 0 0 0 5px var(--color-focus);
      }
    }

    .form-type--checkbox {
      display: flex;
      align-items: center;
      gap: rem(10px);
      margin: 0;

      &::after,
      &::before {
        display: inline-block;
        font-size: rem(14px);
        font-weight: bold;
      }

      &::before {
        content: "Hide";
      }

      &::after {
        content: "Show";
      }
    }
  }
}

// fields in one line for Field group.
%core-adminspring_grid {
  @include breakpoint($bp-tablet) {
    .details-wrapper {
      display: grid;
      align-items: flex-end;
      column-gap: rem(20px);
      margin-top: 0;
      margin-bottom: 0;
    }
    
    .form-item .form-element {
      min-width: 100%;
      width: 100%
    }
  }
}

.adminspring_grid--2col {
  @extend %core-adminspring_grid;

  .details-wrapper {
    @include breakpoint($bp-tablet) {
      grid-template-columns: 1fr 1fr;
    }
  }
}

.adminspring_grid--3col {
  @extend %core-adminspring_grid;

  .details-wrapper {
    @include breakpoint($bp-tablet) {
      grid-template-columns: 1fr 1fr 1fr;
    }
  }
}

